[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dither-go"
version = "0.1.0"
authors = [{name = "tfuxu"}]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tfuxu/dither-go"
"Bug Tracker" = "https://github.com/tfuxu/dither-go/issues"

[tool.setuptools]
packages = ["dither_go", "dither_go.bindings"]
